--- a/templates/main.html
+++ b/templates/main.html
@@ -16,57 +16,106 @@ form {
 </head>
 <form action="{{ url_for('main') }}" method="POST">
     <fieldset>
-        <legend>Input values:</legend>
-        Year:
-        <input name="year" type="number" required>
-        <br>
-        <br> Month:
+        <b><legend>NetFare Prediction Form:</legend></b>
+		<br>
+        <b>Year:</b>
+		<input type="radio" id="2018" name="year" value="2018">
+		<label for="2018">2018</label>
+		<input type="radio" id="2019" name="year" value="2019">
+		<label for="2019">2019</label><br>
+		<!--input name="year" type="number" required -->
+        <br> <b>Itenerary_Type:</b>
+		<input type="radio" id="Domestic" name="itetypeinter" value="0">
+		<label for="Domestic">Domestic</label>
+		<input type="radio" id="International" name="itetypeinter" value="1">
+		<label for="International">International</label><br>
+        <!--input name="itetypeinter" type="number" required -->
+        <br> <b>Month:</b>
         <input name="month" type="number" required>
-        <br>
-        <br> Day:
+		<br>
+        <br><b> Day:</b>
         <input name="day" type="number" required>
         <br>
-		<br> Hour:
+		<br> <b>Hour:</b>
         <input name="hour" type="number" required>
         <br>
-        <br> Minute:
-        <input name="minute" type="number" required>
+        <br> <b>Minute:</b>
+		<input name="minute" type="number" required>
         <br>
-		<br> Product_Type_Air_Cancellation:
-        <input name="protypeaircanc" type="number" required>
+		<hr>
+		<br> <b>Product_Type_Air_Cancellation:</b>
+		<input type="radio" id="no" name="protypeaircanc" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypeaircanc" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypeaircanc" type="number" required-->
+        		
+        <br> <b>Product_Type_Air_Debit_Note:</b>
+		<input type="radio" id="no" name="protypeairdebtnote" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypeairdebtnote" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypeairdebtnote" type="number" required-->
+        
+		<br> <b>Product_Type_Air_Loss:</b>
+		<input type="radio" id="no" name="protypeairloss" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypeairloss" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypeairloss" type="number" required-->
+        
+		<br> <b>Product_Type_Hotel:</b>
+		<input type="radio" id="no" name="protypehot" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypehot" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypehot" type="number" required-->
+     
+        <br> <b>Product_Type_Hotel_Cancellation:</b>
+		<input type="radio" id="no" name="protypehotcanc" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypehotcanc" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypehotcanc" type="number" required-->
+        
+		<br> <b>Product_Type_Hotel_Debit_Note:</b>
+		<input type="radio" id="no" name="protypehotdebnote" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypehotdebnote" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypehotdebnote" type="number" required-->
+        
+        <br> <b>Product_Type_Hotel_Loss:</b>
+		<input type="radio" id="no" name="protypehotloss" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypehotloss" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypehotloss" type="number" required-->
+      
+		<br> <b>Product_Type_Other_Product:</b>
+		<input type="radio" id="no" name="protypeothpro" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypeothpro" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypeothpro" type="number" required-->
+       
+        <br> <b>Product_Type_Other_Product_Cancellation:</b>
+		<input type="radio" id="no" name="protypeothprocanc" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypeothprocanc" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypeothprocanc" type="number" required-->
+       
+		<br> <b>Product_Type_Other_Product_Debit_Note:</b>
+		<input type="radio" id="no" name="protypeothprodebnote" value="0">
+		<label for="no">No</label>
+		<input type="radio" id="yes" name="protypeothprodebnote" value="1">
+		<label for="yes">Yes</label><br>
+        <!--input name="protypeothprodebnote" type="number" required-->
+     
         <br>
-        <br> Product_Type_Air_Debit_Note:
-        <input name="protypeairdebtnote" type="number" required>
-        <br>
-		<br> Product_Type_Air_Loss:
-        <input name="protypeairloss" type="number" required>
-        <br>
-		<br> Product_Type_Hotel:
-        <input name="protypehot" type="number" required>
-        <br>
-        <br> Product_Type_Hotel_Cancellation:
-        <input name="protypehotcanc" type="number" required>
-        <br>
-		<br> Product_Type_Hotel_Debit_Note:
-        <input name="protypehotdebnote" type="number" required>
-        <br>
-        <br> Product_Type_Hotel_Loss:
-        <input name="protypehotloss" type="number" required>
-        <br>
-		<br> Product_Type_Other_Product:
-        <input name="protypeothpro" type="number" required>
-        <br>
-        <br> Product_Type_Other_Product_Cancellation:
-        <input name="protypeothprocanc" type="number" required>
-        <br>
-		<br> Product_Type_Other_Product_Debit_Note:
-        <input name="protypeothprodebnote" type="number" required>
-        <br>
-        <br> Itenerary_Type_International:
-        <input name="itetypeinter" type="number" required>
-        <br>
-		<br>
         <input type="submit">
+		<input type="reset">
     </fieldset>
 </form>
 <br>
@@ -76,7 +125,7 @@ form {
             <b>{{ variable }}</b> : {{ value }}
         {% endfor %}
         <br>
-        <br> Predicted NetFare:
+        <br><b> Predicted NetFare:</b>
            <p style="font-size:50px">{{ result }}</p>
     {% endif %}
 </div>
